fix(grid view): prevent overflow of long parent folder paths on mobile

--- a/src/styles/filelist.styl
+++ b/src/styles/filelist.styl
@@ -211,6 +211,10 @@ column-width-thumbnail-bigger = 7rem
         max-width 6rem
         margin 0 auto
 
+    .fil-file-description
+        max-width 6rem
+        overflow hidden
+
 .fil-file-thumbnail
     position relative
     flex 0 0 column-width-thumbnail - 1rem //width without padding
